Some post-1.17 cleanup
 - Fix broken Javadoc references
 - Apply a couple of refactoring suggestions from IDEA